Initial commit: LiFi Widget + Vite

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'dist/assets/*.js' --no-border-checks",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
